[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phare"
version = "0.0.1"
description = "Fast and ergonomic Project Lighthouse client SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = ["Topic :: Utilities"]
keywords = ["project-lighthouse"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/fwcd/phare"
Repository = "https://github.com/fwcd/phare"

[tool.setuptools.packages]
find = {}

[tool.pyright]
include = ["phare"]
